# AutoTeam-F

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  architecture.md  configuration.md  docker.md  getting-started.md  mail-provider-design.md  troubleshooting.md
src/autoteam/: __init__.py  accounts.py  api.py  cancel_signal.py  chatgpt_api.py  cloudmail.py  codex_auth.py  config.py  cpa_sync.py  display.py  identity.py  invite.py  manager.py  manual_account.py  register_failures.py  runtime_config.py  setup_wizard.py  sub2api_sync.py
src/autoteam/mail/: __init__.py  base.py  cf_temp_email.py  maillab.py
tests/unit/: test_api_status.py  test_api_sub2api_config.py  test_cloudmail.py  test_cmd_check_standby.py  test_cpa_sync_sub2api.py  test_invite_member_seat_fallback.py  test_maillab.py  test_manager_quota.py  test_manager_reinvite.py  test_reconcile_anomalies.py  test_setup_wizard.py  test_sub2api_sync.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  api.js
web/src/components/: Dashboard.vue  Settings.vue  SyncPage.vue  TaskHistory.vue  TaskPanel.vue  TeamMembers.vue
