[project]
name = "autoteam"
version = "0.1.0"
description = "ChatGPT Team 账号自动轮转管理工具"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.28.0",
    "rich>=14.3.4",
    "xvfbwrapper>=0.2.9",
]

[project.scripts]
autoteam = "autoteam.manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoteam"]
